Refactor codebase to implement new module structure and naming conventions
- Replaced instances of 'base.sh' with '_base.sh' across various scripts to align with the new naming convention.
- Updated the .gitignore file to include new patterns for ignored files and removed old patterns.
- Introduced new Python modules prefixed with an underscore for better organization and clarity.
- Adjusted Makefile configurations to reflect the new module names and ensure proper compilation.
- Enhanced import statements in Python scripts to utilize the new module structure.

These changes improve code organization, maintainability, and clarity throughout the project.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Derived files (no Autotools stuff).
 *.o
 a.out
-/lib/*.c
-/lib/*.so
 /bin/clearly
 /cmd/checkns
 /cmd/run
@@ -12,6 +10,12 @@ a.out
 /cmd/image.c
 /cmd/run-oci.c
 /cmd/daemon.c
+/lib/_*.c
+/lib/_*.so
+/lib/_contributors.bash
+/lib/_version.py
+/lib/_version.sh
+/lib/_version.txt
 /examples/copy/dirCa/symlink-to-dirCb
 /examples/copy/dirD/symlink-to-fileDa
 /examples/copy/dirEa/symlink-to-dirEb
@@ -26,10 +30,6 @@ a.out
 /doc/doctrees/
 /doc/html/
 /doc/man/*.[17]
-/lib/contributors.bash
-/lib/version.py
-/lib/version.sh
-/lib/version.txt
 /test/build/30_doctest-auto.bats
 /test/force-auto.bats
 /test/docs-sane
