--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -5,61 +5,60 @@
 # See: https://www.gnu.org/software/automake/manual/html_node/Uniform.html
 mylibdir = $(pkglibdir)
 
-# Python modules to compile via Cython
-cython_modules = \
-  build build_cache charliecloud constants filesystem misc modify pull \
-  push registry image irtree force version
+# Python modules to compile via Cython. These modules contain the core
+# functionality of the system and are written in Python with Cython
+# extensions for performance. They will be compiled to C and then to
+# shared objects for faster execution.
 
-# Generated file lists
+cython_modules = \
+  _build _build_cache _clearly _filesystem _misc _pull _push \
+  _reference _registry _image _irtree _tree _force _grammar _version
+
+
 cython_c_files = $(cython_modules:%=%.c)
 cython_so_files = $(cython_modules:%=%@PYEXT_SUFFIX@)
 
-# Shell + non-Cython files installed as-is
-dist_mylib_DATA = base.sh
+dist_mylib_DATA = _base.sh
 
-# Version + metadata files
-mylib_DATA = contributors.bash version.py version.txt
-mylib_SCRIPTS = version.sh
-
-# Cython rules
+# SUFFIXES is required by Automake to define custom build rules. Without this
+# declaration, Automake will not recognize our .py -> .c -> @PYEXT_SUFFIX@
+# transformation chain and will fail to build the Cython modules. This tells
+# Automake that we have custom build targets for these file extensions.
 SUFFIXES = .py .c @PYEXT_SUFFIX@
 
+mylib_DATA = _contributors.bash _version.py _version.txt 
+mylib_SCRIPTS = _version.sh
+
 .py.c:
-	cython -3 -o $@ $<
+	cython -E LIBDIR="$(pkglibdir)" -E LIBEXECDIR="$(pkglibexecdir)" -3 -o $@ $<
 
 .c@PYEXT_SUFFIX@:
 	$(CC) -shared -fPIC \
 	  -I"$(shell python3 -c 'import sysconfig; print(sysconfig.get_path("include"))')" \
 	  $< -o $@ $(shell python3-config --ldflags)
 
-# Build .so files by default
 all-local: $(cython_so_files)
-
-# Install .so files as data files
 mylib_DATA += $(cython_so_files)
 mylib_LTLIBRARIES =
 
-# Cleanup
-CLEANFILES = $(mylib_DATA) $(cython_c_files) $(cython_so_files)
-
-# Contributor extraction
-contributors.bash: ../README.rst
+_contributors.bash: ../README.rst
 	rm -f $@
 	printf '# shellcheck shell=bash\n' >> $@
 	printf 'declare -a ch_contributors\n' >> $@
 	sed -En 's/^\*.+<(.+@.+)>.*$$/ch_contributors+=('"'"'\1'"'"')/p' < $< >> $@
 
-# Remove empty charliecloud directories after uninstallation.
-uninstall-hook:
-	rmdir $$(find $(pkglibdir) -type d | sort -r)
-
-version.txt: ../configure
+_version.txt: ../configure
 	printf '@PACKAGE_VERSION@\n' > $@
 
-version.py: ../configure
+_version.py: ../configure
 	printf "VERSION='@PACKAGE_VERSION@'\n" > $@
 
-version.sh: ../configure
+_version.sh: ../configure
 	printf "# shellcheck shell=sh disable=SC2034\n" > $@
 	printf "ch_version='@PACKAGE_VERSION@'\n" >> $@
 	chmod +x $@
+
+uninstall-hook:
+	rmdir $$(find $(pkglibdir) -type d | sort -r)
+
+CLEANFILES = $(mylib_DATA) $(cython_c_files) $(cython_so_files)
