Refactor conversion functions and update command usage
- Renamed conversion functions from 'cv_chimage_*' to 'cv_image_*' for consistency and clarity.
- Updated internal validation functions to reflect the new naming conventions.
- Changed command usage in test scripts from 'ch-convert' to 'clearly convert' to align with the new branding.
- Introduced a new test suite for conversion functionality to ensure comprehensive coverage.

These changes enhance code readability and maintainability while reinforcing the updated branding across the project.

--- a/test/make-auto.d/build_custom.bats.in
+++ b/test/make-auto.d/build_custom.bats.in
@@ -32,7 +32,7 @@ source common.bash  # for ShellCheck; removed by ch-test
                 else
                     xattrs_arg=
                 fi
-                ch-convert $xattrs_arg "$tarball" "${tarball/tar.?z/sqfs}"
+                clearly convert $xattrs_arg "$tarball" "${tarball/tar.?z/sqfs}"
                 rm "$tarball"
             fi
         elif [[ -d $out ]]; then                             # directory
@@ -47,7 +47,7 @@ source common.bash  # for ShellCheck; removed by ch-test
                     false  # unknown format
                     ;;
             esac
-            ch-convert "$out" "${out}.${ext}"
+            clearly convert "$out" "${out}.${ext}"
         else
             false  # unknown format
         fi
