--- a/test/make-auto.d/builder_to_archive.bats.in
+++ b/test/make-auto.d/builder_to_archive.bats.in
@@ -14,7 +14,7 @@ source common.bash  # for ShellCheck; removed by ch-test
             ;;
     esac
     archive=${ch_tardir}/%(tag)s.${ext}
-    ch-convert -i "$CH_TEST_BUILDER" '%(tag)s' "$archive"
+    clearly convert -i "$CH_TEST_BUILDER" '%(tag)s' "$archive"
     archive_grep "$archive"
     archive_ok "$archive"
 }
