Update storage paths from '.ch' to '.clearly' across the codebase
- Changed default storage paths in various scripts and files to use the new '.clearly' suffix instead of '.ch' for consistency with the updated branding.
- Updated related test scripts to reflect these changes, ensuring alignment with the new storage conventions.

These modifications enhance clarity and maintainability throughout the project.

--- a/test/Dockerfile.argenv
+++ b/test/Dockerfile.argenv
@@ -2,7 +2,7 @@
 # quirks; for that see test “Dockerfile: syntax quirks” in
 # build/50_dockerfile.bats. Results are checked in both test “Dockerfile: ARG
 # and ENV values” in build/50_dockerfile.bats and multiple tests in
-# run/ch-run_misc.bats. The latter is why this is a separate Dockerfile
+# run/run_misc.bats. The latter is why this is a separate Dockerfile
 # instead of embedded in a .bats file.
 
 # ch-test-scope: standard
