Update branding from Clearstack to Clearly across the codebase
- Changed all instances of "Clearstack" to "Clearly" in service files, documentation, and code comments to reflect the new branding.
- Updated test scripts and examples to use the Clearly naming convention, ensuring consistency throughout the project.
- Adjusted logging messages and error handling to align with the new branding.

These modifications enhance clarity and maintainability while reinforcing the Clearly identity.

--- a/clearly.service
+++ b/clearly.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Clearstack Daemon
+Description=Clearly Daemon
 Documentation=https://clearly.run/docs
 After=network.target
 Wants=network.target
