--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@
 #    See: https://www.gnu.org/software/autoconf/manual/autoconf-2.69/html_node/Quadrigraphs.html
 #
 # 2. Booleans. The convention for Autoconf variables, which we follow, is
-#    “yes” for true and “no” for false. This differs from the Clearstack
+#    “yes” for true and “no” for false. This differs from the Clearly
 #    convention of non-empty for true and empty for false.
 
 
@@ -966,7 +966,7 @@ Below is a summary of configure's findings.
 Caveats
 ~~~~~~~
 
-Clearstack's run-time dependencies are lazy; features just try to use their
+Clearly's run-time dependencies are lazy; features just try to use their
 dependencies and error if there's a problem. This report summarizes what
 configure found on *this system*, because that's often useful, but none of the
 run-time findings change what is built and installed.
@@ -974,7 +974,7 @@ run-time findings change what is built and installed.
 Listed versions are minimums. These are a bit fuzzy. Try it even if configure
 thinks a version is too old, and please report back to us.
 
-Building Clearstack
+Building Clearly
 ~~~~~~~~~~~~~~~~~~~~~
 
   will build and install:
