Refactor codebase to replace 'ch_' prefix with 'clearly_' and update related paths
- Renamed all instances of the 'ch_' prefix to 'clearly_' across the codebase, including variables, functions, and paths, to ensure consistency with the new branding.
- Updated Makefile configurations, test scripts, and documentation to reflect the new naming conventions.
- Adjusted logging messages and error handling to align with the Clearly branding.

These changes enhance clarity, maintainability, and reinforce the Clearly identity throughout the project.

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,8 +17,8 @@ install-exec-hook:
 			 $(DESTDIR)@libdir@/clearly/_base.sh; \
 	do \
 	  if [ -e $$i ]; then \
-	    sed -Ei -e 's|^(ch_lib ?= ?).+/lib"?$$|\1"@libdir@/clearly"|' \
-				-e 's|^(ch_libexec ?= ?).+/libexec"?$$|\1"@libexecdir@/clearly"|' \
+	    sed -Ei -e 's|^(clearly_lib ?= ?).+/lib"?$$|\1"@libdir@/clearly"|' \
+				-e 's|^(clearly_libexec ?= ?).+/libexec"?$$|\1"@libexecdir@/clearly"|' \
 	            -e 's|^(CHTEST_DIR=).+$$|\1@datadir@/clearly|' \
 	            -e 's|^(CHTEST_EXAMPLES_DIR=).+$$|\1@docdir@/examples|' \
                 $$i; \
