--- a/test/make-auto.d/build.bats.in
+++ b/test/make-auto.d/build.bats.in
@@ -4,6 +4,6 @@ source common.bash  # for ShellCheck; removed by ch-test
     scope %(scope)s
     # shellcheck disable=SC2086
     build_ -t %(tag)s --file="%(path)s" "%(dirname)s"
-    #sudo docker tag %(tag)s "%(tag)s:$ch_version_docker"
+    #sudo docker tag %(tag)s "%(tag)s:$clearly_version_docker"
     builder_ok %(tag)s
 }
