Add networking support and refactor containerization in core.c
- Introduced a new structure for managing poll file descriptors and added helper functions for network event handling.
- Enhanced the containerize function to support TAP device creation and port mapping using libslirp.
- Updated the Makefile to link against the libslirp library.
- Added command-line options for port mapping in the run command.

These changes improve the networking capabilities of the containerization process, enabling better integration and configuration options.

--- a/cmd/Makefile.am
+++ b/cmd/Makefile.am
@@ -16,7 +16,7 @@ endif
 
 # additional build flags for run
 run_CFLAGS = $(PTHREAD_CFLAGS) -DLIBEXECDIR="\"$(pkglibexecdir)\""
-run_LDADD = $(CLEARLY_RUN_LIBS)
+run_LDADD = $(CLEARLY_RUN_LIBS) -lslirp
 
 
 ## Shell scripts - distributed as-is
