Add libnl and libslirp support for network configuration
- Integrated checks for libslirp and libnl dependencies in configure.ac to ensure required libraries are available.
- Refactored the containerize function in core.c to utilize libnl for managing TAP device network namespaces and configurations, replacing previous command-line calls with netlink API usage.
- Updated Makefile.am to link against libnl and libslirp libraries.
- Enhanced installation documentation to include libnl3-devel as a required package.

These changes improve the networking capabilities and robustness of the containerization process, enabling more efficient network management.

--- a/cmd/Makefile.am
+++ b/cmd/Makefile.am
@@ -15,8 +15,8 @@ run_SOURCES += fuse.h fuse.c
 endif
 
 # additional build flags for run
-run_CFLAGS = $(PTHREAD_CFLAGS) -DLIBEXECDIR="\"$(pkglibexecdir)\""
-run_LDADD = $(CLEARLY_RUN_LIBS) -lslirp
+run_CFLAGS = $(PTHREAD_CFLAGS) -DLIBEXECDIR="\"$(pkglibexecdir)\"" @LIBNL_CFLAGS@
+run_LDADD = $(CLEARLY_RUN_LIBS) @LIBSLIRP_LIBS@ @LIBNL_LIBS@
 
 
 ## Shell scripts - distributed as-is
