Enhance libslirp integration and improve polling mechanism in containerize
- Updated configure.ac to require libslirp version 4.4.0 or higher.
- Added new callback functions for libslirp to handle packet sending, guest errors, and timer management.
- Refactored the containerize function to better manage file descriptors and timers, ensuring efficient polling and event handling.
- Improved handling of TAP device registration and unregistration within the polling loop.

These changes enhance the networking capabilities and robustness of the containerization process, leveraging libslirp for improved performance and reliability.

--- a/configure.ac
+++ b/configure.ac
@@ -250,7 +250,7 @@ AS_IF([test "$CC" = icc],
       [AC_MSG_ERROR([icc not supported (see PR @%:@481)])])
 
 # Check for libslirp
-PKG_CHECK_MODULES([LIBSLIRP], [slirp],,
+PKG_CHECK_MODULES([LIBSLIRP], [slirp >= 4.4.0],,
       [AC_MSG_ERROR([libslirp-devel is required. Please install it.])])
 
 # Check for libnl
