Update network configuration and dependencies in configure.ac and core.c
- Replaced libslirp with libmnl and libnftnl for improved netlink socket management and netfilter rule handling.
- Updated the configure.ac file to check for the new dependencies, ensuring proper installation requirements.
- Refactored core.c to remove libslirp references and implement network bridge setup using libmnl and libnftnl.
- Enhanced the network setup process in the containerization function, including creating a bridge and configuring routes.

These changes modernize the networking stack, improving maintainability and functionality in the containerization process.

--- a/cmd/Makefile.am
+++ b/cmd/Makefile.am
@@ -16,8 +16,7 @@ endif
 
 # additional build flags for run
 run_CFLAGS = $(PTHREAD_CFLAGS) -DLIBEXECDIR="\"$(pkglibexecdir)\"" @LIBNL_CFLAGS@
-run_LDADD = $(CLEARLY_RUN_LIBS) @LIBSLIRP_LIBS@ @LIBNL_LIBS@
-
+run_LDADD = $(CLEARLY_RUN_LIBS) @LIBMNL_LIBS@ @LIBNFTNL_LIBS@ @LIBNL_LIBS@
 
 ## Shell scripts - distributed as-is
 
