--- a/configure.ac
+++ b/configure.ac
@@ -249,9 +249,13 @@ AX_CHECK_COMPILE_FLAG([$clearly_cflags], [
 AS_IF([test "$CC" = icc],
       [AC_MSG_ERROR([icc not supported (see PR @%:@481)])])
 
-# Check for libslirp
-PKG_CHECK_MODULES([LIBSLIRP], [slirp >= 4.4.0],,
-      [AC_MSG_ERROR([libslirp-devel is required. Please install it.])])
+# Check for libmnl
+PKG_CHECK_MODULES([LIBMNL], [libmnl >= 1.0.4],,
+      [AC_MSG_ERROR([libmnl-devel is required. Please install it.])])
+
+# Check for libnftnl
+PKG_CHECK_MODULES([LIBNFTNL], [libnftnl >= 1.2.6],,
+  [AC_MSG_ERROR([libnftnl-devel is required. Please install it.])])
 
 # Check for libnl
 PKG_CHECK_MODULES([LIBNL], [libnl-3.0 libnl-route-3.0],,
@@ -311,10 +315,13 @@ AC_LINK_IFELSE([AC_LANG_SOURCE([[
 # pthreads; needed for “clearly run --join”.
 AX_PTHREAD
 
-# Libslirp libraries.
-PKG_CHECK_MODULES([LIBSLIRP], [slirp])
+# Libmnl libraries.
+PKG_CHECK_MODULES([LIBMNL], [libmnl])
 
-# Netlink libraries.
+# LIBNFTNL libraries.
+PKG_CHECK_MODULES([LIBNFTNL], [libnftnl])
+
+# Libnl libraries.
 PKG_CHECK_MODULES([LIBNL], [libnl-3.0 libnl-route-3.0])
 
 # POSIX IPC lives in librt.
