Remove run-oci references and update network configuration in core.c
- Deleted the run-oci script and its associated references from the project, including documentation and build files.
- Updated the network configuration in the containerize function to change the bridge and guest IP addresses from 172.18.x.x to 172.19.x.x for improved network management.
- Removed unnecessary comments and cleaned up the Makefile to reflect the removal of run-oci.

These changes streamline the codebase by eliminating the run-oci functionality and enhancing the network configuration for containerization.

--- a/cmd/Makefile.am
+++ b/cmd/Makefile.am
@@ -23,7 +23,7 @@ run_LDADD = $(CLEARLY_RUN_LIBS) @LIBMNL_LIBS@ @LIBNFTNL_LIBS@ @LIBNL_LIBS@
 cmd_SCRIPTS = convert fromhost test
 
 # Python modules to compile via Cython
-cython_modules = image daemon run-oci
+cython_modules = image daemon
 
 # Generated file lists
 cython_c_files = $(cython_modules:%=%.c)
@@ -34,8 +34,6 @@ cmd_PROGRAMS += $(cython_modules)
 # Set sources for all Cython programs
 image_SOURCES = image.c
 daemon_SOURCES = daemon.c
-run_oci_SOURCES = run-oci.c
-run_oci_CFLAGS = -Wno-unused-function
 
 # Cython compilation rules
 SUFFIXES = .py .c
@@ -54,6 +52,5 @@ SUFFIXES = .py .c
 # Link with Python libraries
 image_LDADD = $(PYTHON_LIB)
 daemon_LDADD = $(PYTHON_LIB)
-run_oci_LDADD = $(PYTHON_LIB)
 
 CLEANFILES = $(cython_c_files)
