Implement network bridge and veth pair management in link.c
- Introduced new functions for creating and managing network bridges and virtual Ethernet (veth) pairs, enhancing the networking capabilities of the containerization process.
- Added functions to set veth properties such as IP address, VLAN, and network namespace, allowing for more flexible network configurations.
- Integrated these functionalities into the existing codebase, ensuring proper handling of network interfaces during container initialization.
- Updated Makefile to include the new link.c and link.h files, ensuring they are compiled as part of the project.

These changes streamline the network setup process, improving the overall management of container networking.

--- a/cmd/Makefile.am
+++ b/cmd/Makefile.am
@@ -9,7 +9,7 @@ cmd_PROGRAMS = checkns run
 
 checkns_SOURCES = checkns.c misc.h misc.c
 
-run_SOURCES = run.c core.h core.c misc.h misc.c
+run_SOURCES = run.c core.h core.c link.h link.c misc.h misc.c
 if HAVE_LIBSQUASHFUSE
 run_SOURCES += fuse.h fuse.c
 endif
