Refactor clearly.service security settings and remove test.py
- Commented out security settings in clearly.service for potential re-evaluation.
- Deleted test.py as it is no longer needed for the current testing framework.
- Updated core.c to comment out IP forwarding code, enhancing code clarity.
- Adjusted daemon.py to remove unnecessary container directory creation, streamlining container management.

--- a/clearly.service
+++ b/clearly.service
@@ -22,15 +22,15 @@ StandardError=journal
 SyslogIdentifier=clearly
 
 # Security settings
-NoNewPrivileges=true
-ProtectSystem=strict
-ProtectHome=true
-ReadWritePaths=/tmp/clearly /var/log
-ProtectKernelTunables=true
-ProtectKernelModules=true
-ProtectControlGroups=true
-RestrictRealtime=true
-RestrictSUIDSGID=true
+# ProtectSystem=strict
+# ProtectHome=true
+# ReadWritePaths=/tmp/clearly /var/log
+# ProtectKernelTunables=true
+# ProtectKernelModules=true
+# ProtectControlGroups=true
+# RestrictRealtime=true
+# RestrictSUIDSGID=true
+# NoNewPrivileges=true
 
 # Resource limits
 LimitNOFILE=65536
