--- a/cmd/Makefile.am
+++ b/cmd/Makefile.am
@@ -24,39 +24,36 @@ link_LDADD = @LIBMNL_LIBS@ @LIBNFTNL_LIBS@ @LIBNL_LIBS@
 
 cmd_SCRIPTS = convert fromhost test version
 
-# Python modules to compile via Nuitka
-nuitka_modules = image daemon
+# Python modules to compile via Cython
+cython_modules = image daemon
 
-# Add Nuitka-compiled programs to the list of programs to be built
-cmd_PROGRAMS += $(nuitka_modules)
+# Generated file lists
+cython_c_files = $(cython_modules:%=%.c)
 
-## Tell Automake there are no C sources for Nuitka modules
-image_SOURCES =
-daemon_SOURCES =
+# Build Python scripts as C extensions using Cython
+cmd_PROGRAMS += $(cython_modules)
 
-# Nuitka compilation rules
-# We use --standalone to create a directory with the binary and its dependencies.
-# For a single file executable, --onefile can be used.
-$(nuitka_modules): %: %.py
-	@echo "Compiling $< with Nuitka..."
-	LDFLAGS="$(image_LDADD)" PYTHONPATH=.. python3 -m nuitka \
-		--onefile \
-		--include-package=lib \
-		--output-filename=$(@) \
-		--force-runtime-environment-variable=PKGLIBDIR="$(pkglibdir)" \
-		--force-runtime-environment-variable=PKGLIBEXECDIR="$(pkglibexecdir)" \
-		--force-runtime-environment-variable=PKGDATADIR="$(pkgdatadir)" \
-		--force-runtime-environment-variable=HAVE_NUITKA="True" \
-		$<
+# Set sources for all Cython programs
+image_SOURCES = image.c
+daemon_SOURCES = daemon.c
 
-# Version script
-version: ../configure
-	printf "#!/bin/sh\n" > $@
-	printf "echo '@PACKAGE_VERSION@'" >> $@
-	chmod +x $@
+# Cython compilation rules
+SUFFIXES = .py .c
 
-# Tell make that the targets are not actual files in the source directory
-.PHONY: $(nuitka_modules)
+.py.c:
+	rm -f $@
+	cython $< \
+		-E PKGLIBDIR="$(pkglibdir)" \
+		-E PKGLIBEXECDIR="$(pkglibexecdir)" \
+		-E PKGDATADIR="$(pkgdatadir)" \
+		--embed \
+		-3 \
+		-o $@ \
+		--module-name $(subst -,_,$(basename $<))
+	chmod +rx,-w $@  # respects umask
 
-# Update CLEANFILES to remove Nuitka build artifacts
-CLEANFILES = $(nuitka_modules:=.dist) $(nuitka_modules:=.build)
+# Link with Python libraries
+image_LDADD = $(PYTHON_LIB)
+daemon_LDADD = $(PYTHON_LIB)
+
+CLEANFILES = $(cython_c_files)
