Refactor environment variable handling and update file references
- Changed references from `base.sh` to `_base.sh` across multiple scripts to standardize the library usage.
- Updated `.gitignore` to reflect changes in the library file naming.
- Modified command-line options from `--set-env` to `--env` for consistency in environment variable management.
- Adjusted documentation to align with the new command-line options.
- Removed obsolete `container.py` route file to clean up the codebase.

These changes improve code clarity and maintainability while ensuring consistent usage of environment variable handling.

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ a.out
 /cmd/version
 /cmd/image.c
 /cmd/daemon.c
-/lib/_*.c
-/lib/_*.so
+/lib/*.c
+/lib/*.so
 /examples/copy/dirCa/symlink-to-dirCb
 /examples/copy/dirD/symlink-to-fileDa
 /examples/copy/dirEa/symlink-to-dirEb
