Fix makefile for static files

--- a/static/Makefile.am
+++ b/static/Makefile.am
@@ -1,8 +1,8 @@
-imagesdir = $(pkgdatadir)/images
-stylesdir = $(pkgdatadir)/styles
-templatesdir = $(pkgdatadir)/templates
+imagesdir = $(pkgdatadir)
+stylesdir = $(pkgdatadir)
+templatesdir = $(pkgdatadir)
 
-images_DATA = \
+nobase_images_DATA = \
   images/favicon-32x32.png \
   images/favicon-256x256.png \
   images/favicon.svg \
@@ -11,7 +11,7 @@ images_DATA = \
   images/tensorflow.svg \
   images/vscode.svg
 
-styles_DATA = \
+nobase_styles_DATA = \
   styles/base/_mixins.scss \
   styles/base/_variables.scss \
   styles/layout/_header.scss \
@@ -22,7 +22,7 @@ styles_DATA = \
   styles/pages/_studio.scss \
   styles/main.scss
 
-templates_DATA = \
+nobase_templates_DATA = \
   templates/layout/header.html \
   templates/layout/navigation.html \
   templates/layout/searchbar.html \
@@ -31,7 +31,7 @@ templates_DATA = \
   templates/pages/studio.html \
   templates/main.html
 
-EXTRA_DIST = $(images_DATA) $(styles_DATA) $(templates_DATA)
+EXTRA_DIST = $(nobase_images_DATA) $(nobase_styles_DATA) $(nobase_templates_DATA)
 
 uninstall-local:
 	@find "$(DESTDIR)$(pkgdatadir)" -type f -delete
