--- a/packaging/Makefile.am
+++ b/packaging/Makefile.am
@@ -1,8 +1,5 @@
 EXTRA_DIST = \
 README \
-requirements.txt \
 fedora/build \
-fedora/charliecloud.rpmlintrc \
-fedora/charliecloud.spec \
-fedora/el7-pkgdir.patch \
-fedora/upstream.spec
+fedora/clearly.rpmlintrc \
+fedora/clearly.spec
